[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.18.0"
aiogram = "^2.13"
urlpath = "^1.1.7"
pydantic = "^1.8.2"
asyncpg = "^0.23.0"
SQLAlchemy = "^1.4.20"
alembic = "^1.6.5"
psycopg2-binary = "^2.9.1"
APScheduler = "^3.7.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
