[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.18.0"
aiogram = "^2.14"
urlpath = "^1.1.7"
pydantic = "^1.8.2"
asyncpg = "^0.23.0"
SQLAlchemy = "^1.4.20"
alembic = "^1.6.5"
APScheduler = "^3.7.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipython = "^7.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
